--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h3>Press any button on controller to start the test</h3>
     <div class="time">running: <span id="running"></span><span> ms</span></div>
     <div id="gamepads"></div>
+    <button id="vibrationButton">Test Vibration</button>
+    <input type="range" min="0" max="1" step="0.1" value="0.5" id="vibrationIntensitySlider">
+    <div class="gyroscope">
+      <p><b>Gyroscope Data:</b></p>
+      <div class="gyro-data"></div>
+    </div>
     </body>
     <script src = "script.js"></script>
     </html>
